# Gemini-FastAPI

./: .gitignore  Cargo.toml  Dockerfile.rust  README.md  README.rust.md  README.zh.md
app/server/: chat.py
app/services/: client.py  pool.py
app/utils/: config.py
config/: config.yaml
docs/: ARCHITECTURE.md  NANOBOT_ITERATION.md  NANOBOT_OPS.md
ops/: cleanup-runtime.sh  gemini-active-probe.py  install-active-probe.sh
ops/systemd/: gemini-fastapi-active-probe.service  gemini-fastapi-active-probe.timer
src/: config.rs  gemini.rs  history.rs  images.rs  main.rs  openai.rs  routing.rs
